kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
  labels:
    app: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api-container
        image: lucassctestregistry.azurecr.io/todo-api-image:v1
        ports:
        - containerPort: 5008
