kubernetes/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-database-deployment
  labels:
    app: todo-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-database
  template:
    metadata:
      labels: 
        app: todo-database
    spec:
      containers:
      - name: todo-database-container
        image: postgres:14.6
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: todo-database-data
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: todo-database-data
        persistentVolumeClaim:
          claimName: todo-database-pvc
